--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ main {
   background-color: #F3F2EF;
 }
 
-.main-profile-photo, .profile-photo-comment {
+.main-profile-photo {
 
   border-radius: 100px;
   height: 70px;
@@ -127,7 +127,8 @@ main {
 
 /*START Suggestions Section*/
 .suggestions-logo {
-  max-height: 50px;
+  height: 50px;
+  width: 50px;
   border-radius: 100px;
 }
 
@@ -169,4 +170,19 @@ main {
 #profile-lang, #profile-awards, #profile-education, #profile-about, #profile-card, #profile-experience {
 
   border-radius: 10px;
+}
+
+.post-profile-photo, .profile-photo-comment {
+
+  width: 35px;
+  height: 35px;
+  border-radius: 100px;
+
+}
+
+.job-company-photo {
+
+	width:45px;
+	height:45px;
+	border-radius:100px;
 }
